# BanglaRagNLP

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: api.py  streamlit_app.py
data/: qa_benchmark.json
notebooks/: 01_eda_and_scraping.ipynb
src/banglamed_rag/: __init__.py  cleaner.py  config.py  embedder.py  evaluator.py  rag_chain.py  scraper.py  utils.py  vectorstore.py
tests/: test_cleaner.py  test_embedder.py  test_rag_chain.py  test_vectorstore.py
