[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banglamed-rag"
version = "0.1.0"
description = "Retrieval-augmented generation for Bengali biomedical QA using Bangla-BERT and local LLMs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "BanglaMed-RAG" }]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "langdetect>=1.0.9",
  "bnlp-toolkit>=4.0.0",
  "indic-nlp-library>=0.92",
  "sentence-transformers>=2.6.0",
  "chromadb>=0.5.0",
  "langchain-core>=0.2.0",
  "langchain-community>=0.2.0",
  "ragas>=0.1.15",
  "datasets>=2.18.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "streamlit>=1.33.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
